# freshenv

./: fr-flavours.json  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: Build-Test.yml  Integration-Tests.yml
freshenv/: build.py  flavours.py  provision.py
