[tool.poetry]
name = "freshenv"
version = "1.2.5"
description = ""
authors = [
    "raiyanyahya <raiyanyahyadeveloper@gmail.com>",
    "pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "3.10.5"
docker = "^5.0.3"
requests = "^2.28.0"
rich = "^12.4.4"
GitPython = "^3.1.27"
dockerpty = "^0.4.1"
click = "^8.1.3"
typer = "^0.4.1"
Jinja2 = "^3.1.2"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
icecream = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
